--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "db":"json-server --watch src/fake-api/db.json"
+    "db": "json-server --watch src/fake-api/db.json"
   },
   "dependencies": {
-    "formik": "^2.4.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "formik": "^2.4.4",
     "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "recharts": "^2.8.0",
     "yup": "^1.2.0"
