--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
